@@ -1,3 +1,9 @@
+2011-02-07  Vadim Kurland  <vadim@netcitadel.com>
+
+	* AddressTableDialog.cpp (browse): fixes #1914 "Address table
+	object file name is not created properly if user clicks outside
+	Editor panel"
+
 2011-02-06  vadim  <vadim@netcitadel.com>
 
 	* SSHUnx.cpp (SSHUnx): fixes #2049 "Installer reports success even
